# Rain-IDE-V2

./: .gitignore  COMPILATION_FIXES_PLAN.md  FEATURES.md  LICENSE  README.md  SBOM.md  SCRATCHPAD.md  SUMMARY.md  index.html  launch.ps1  package-lock.json  package.json  vite.config.ts
DEV_DOCS/: AI_CHAT_SYSTEM.md  CRITICAL_DISCOVERY_48_FEATURES.md  EMBEDDING_MODEL_INTEGRATION.md  IDE stuffs.md  MODEL_LOADING_TROUBLESHOOTING.md  PROJECT_STATUS.md  REMOVED_FEATURES_AND_FUTURE_PLANS.md
models/: README.md
models/LFM2-350M/: README.md  model_info.json
models/LFM2-VL-1.6B-Q8_0/: README.md
models/Qwen2.5-0.5B-Instruct-Gensyn-Swarm-tall_mammalian_caribou/: README.md  config.json  model_info.json
models/embedding/: README.md
models/embedding/embeddinggemma-300m/: model_info.json
models/gemma-3-270m-it/: README.md  model_info.json
scripts/: download_embedding_model.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  main.rs  performance.rs
src-tauri/src/ai/: assistant.rs  chat.rs  context.rs  mod.rs  model_manager.rs
src-tauri/src/core/: debugger.rs  editor.rs  git.rs  lsp.rs  mod.rs  project.rs  terminal.rs
src-tauri/src/ui/: ai.rs  debugger.rs  editor.rs  file.rs  git.rs  mod.rs  performance.rs  project.rs  settings.rs  terminal.rs
src/components/: AIChatPanel.tsx  AIModelPicker.tsx  CodeEditor.tsx  EmbeddingTestPanel.tsx  FileExplorer.tsx  FloatingModelButton.tsx  IDELayout.tsx  IntegratedTerminal.tsx  ModelPickerPanel.tsx  PerformancePanel.tsx  StatusBar.tsx  StatusBarPerformance.tsx  TitleBar.tsx  WelcomeScreen.tsx  Workspace.tsx
src/stores/: aiStore.ts  appStore.ts  editorStore.ts  modelStatusStore.ts  projectStore.ts
src/styles/: global.css
src/types/: project.ts
